<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PasswordActivity" >

    <TextView
        android:id="@+id/header_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/registration_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header_password"
        android:layout_below="@+id/header_password"
        android:layout_marginTop="16dp"
        android:text="@string/registration_text_third"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/password_weiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repeat_password_eingabe"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/repeat_password_eingabe"
        android:layout_marginBottom="23dp"
        android:onClick="weiter_password"
        android:text="@string/next_Button" />

    <EditText
        android:id="@+id/password_eingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignRight="@+id/password_text"
        android:layout_below="@+id/password_text"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/repeat_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_eingabe"
        android:layout_alignRight="@+id/password_eingabe"
        android:layout_below="@+id/password_eingabe"
        android:layout_marginTop="29dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/repeat_password_eingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repeat_password_text"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/repeat_password_text"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>