<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity" >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/registration_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/HNrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header"
        android:layout_below="@+id/header"
        android:layout_marginTop="14dp"
        android:text="@string/registration_text_first"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/HNrEingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/HNrText"
        android:layout_alignRight="@+id/HNrText"
        android:layout_below="@+id/HNrText"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/weiter_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/HNrEingabe"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/HNrEingabe"
        android:layout_marginBottom="26dp"
        android:onClick="weiter"
        android:text="@string/next_Button" />

</RelativeLayout>