<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationAuthActivity" >

    <TextView
        android:id="@+id/header_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/registration_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/auth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/header_password"
        android:layout_below="@+id/header_password"
        android:layout_marginTop="16dp"
        android:text="@string/registration_text_second"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/auth_eingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auth_text"
        android:layout_alignRight="@+id/auth_text"
        android:layout_below="@+id/auth_text"
        android:layout_marginTop="20dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/weiter_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auth_eingabe"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/auth_eingabe"
        android:onClick="weiter_password"
        android:text="@string/next_Button" />

</RelativeLayout>